test-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'

Resources:
  PrismDemoTestInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08e2d37b6a0129927
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref HTTPSecurityGroup
      Tags:
        - Key: git_last_modified_at
          Value: "2023-02-02 18:25:40"
        - Key: git_file
          Value: test-stack.yaml
        - Key: git_commit
          Value: 6cf903caad10c2d01f2d78ac0401123419c06fb7
        - Key: yor_trace
          Value: b8caad4d-f8f3-406e-b6fb-a5d1c815b179
        - Key: git_repo
          Value: aws_cloud_formation_4
        - Key: git_org
          Value: pvondemhagen
        - Key: git_modifiers
          Value: pvondemhagen
        - Key: git_last_modified_by
          Value: pvondemhagen@yahoo.com
  HTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable port 80  and port 443
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      Tags:
        - Key: git_modifiers
          Value: pvondemhagen
        - Key: git_last_modified_by
          Value: pvondemhagen@yahoo.com
        - Key: git_last_modified_at
          Value: "2023-02-02 18:25:40"
        - Key: git_file
          Value: test-stack.yaml
        - Key: git_commit
          Value: 6cf903caad10c2d01f2d78ac0401123419c06fb7
        - Key: yor_trace
          Value: 4f8573a2-64a3-4d8a-ad14-aa5d6a2f656b
        - Key: git_repo
          Value: aws_cloud_formation_4
        - Key: git_org
          Value: pvondemhagen
